crates/mapal-ir/tests/snapshots/golden_mermaid__a_add.snap
---
source: crates/mapal-ir/tests/golden_mermaid.rs
expression: dump
---
flowchart LR
    subgraph f0["fn add"]
        f0o0(("(i32, i32)"))
        f0o1(("ret: i32"))
        f0o2(("a: i32"))
        f0o3(("b: i32"))
        f0o4(("(i32, i32)"))
        f0o0 -- "Proj 0" --> f0o2
        f0o0 -- "Proj 1" --> f0o3
        f0o2 -- "Pair 0/2" --> f0o4
        f0o3 -- "Pair 1/2" --> f0o4
        f0o4 -- "Add" --> f0o1
    end
