crates/mapal-ir/tests/snapshots/golden_mermaid__f_fanout_no_join.snap
---
source: crates/mapal-ir/tests/golden_mermaid.rs
expression: dump
---
flowchart LR
    subgraph f0["fn fan"]
        f0o0(("i32"))
        f0o1(("ret: (i32, i32)"))
        f0o2(("2: i32"))
        f0o3(("3: i32"))
        f0o4(("(i32, i32)"))
        f0o5(("i32"))
        f0o6(("(i32, i32)"))
        f0o7(("i32"))
        f0o0 -- "Pair 0/2" --> f0o4
        f0o2 -- "Pair 1/2" --> f0o4
        f0o4 -- "Mul" --> f0o5
        f0o5 -- "Pair 0/2" --> f0o1
        f0o0 -- "Pair 0/2" --> f0o6
        f0o3 -- "Pair 1/2" --> f0o6
        f0o6 -- "Mul" --> f0o7
        f0o7 -- "Pair 1/2" --> f0o1
    end
